# jinja2-slug

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
jinja2_slug/: __init__.py
src/jinja2_slug/: __init__.py  core.py
tests/: test_slug.py
