[tool.poetry]
name = "jinja2-slug"
version = "0.2.0"
description = "Jinja2 Extension for creating slugs"
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
unicode-slugify = "^0.1.3"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
tox = "^3.13"
pytest = "^5.1"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
